# newsclocker-scheduler

./: .gitignore  README.md  deploy_lambda.py
.github/workflow/: cicd.yml
.github/workflows/: cicd.yml
db-polling-lambda/: .Dockerignore  README.md  lambda_function.py  main.py  pyproject.toml  requirements.txt  sqs_access_policy.json
db-polling-lambda/notebooks/: main.ipynb
db-polling-lambda/src/: aws_utils.py  dependencies.py
db-polling-lambda/terraform/: ecr.tf  lambda.tf  variables.tf
insight-workflow-lambda/: .Dockerignore  Dockerfile.aws.lambda  README.md  lambda_function.py  main.py  pyproject.toml  requirements.txt  sqs_record_example.json
insight-workflow-lambda/src/: aws_utils.py  chat.py  dependencies.py  prompts.py  scrape.py  search_news.py  send_email.py  utils.py
news-insight-ai-agent-lambda/: Dockerfile  README.md  hello.py  lambda_function.py  main.py  pyproject.toml  requirements.txt
news-insight-ai-agent-lambda/notebooks/: main.ipynb
news-insight-ai-agent-lambda/src/: chat.py  dependencies.py  markdown_to_pdf.py  prompts.py  scrape.py  search_news.py  send_email.py  utils.py
terraform/: db-polling-lambda.tf  db_polling_lambda.tf  ecr.tf  eventbridge.tf  insight_workflow_lambda.tf  lambda.tf  sqs.tf  variables.tf
terraform/terraform.tfstate.d/prod/: .terraform.tfstate.lock.info
