[project]
name = "db-polling-lambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.90",
    "loguru>=0.7.3",
    "pymongo>=4.10.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
]
